prevent collapsing whitespaces

--- a/angular/src/app/editor/editor.component.css
+++ b/angular/src/app/editor/editor.component.css
@@ -37,7 +37,7 @@
 
 #context-block {
   outline: -webkit-focus-ring-color auto 1px;
-  white-space: pre-line;
+  white-space: pre-wrap;
   line-height: 120%;
   font-family: monospace;
 }
